fixed gap

--- a/src/sass/components/_v_card.scss
+++ b/src/sass/components/_v_card.scss
@@ -60,6 +60,6 @@
   border-radius: 4px;
   padding:16px;
 }
-spend-summary-container{
-  gap:16px;
+.spend-summary-container{
+  gap:16px !important;
 }
